--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
+<!--  type live-server and npm run compile:sass in 2 different terminals to start the project -->
 
 <body>
     <header class="header">
